--- a/index.html
+++ b/index.html
@@ -1,22 +1,1 @@
-
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>鼠鼠的数学冒险</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body onload="playMusic()">
-  <audio id="bgm" src="audio/forest.mp3" loop></audio>
-  <h1 class="fade-in">欢迎来到鼠鼠的魔法森林</h1>
-  <img src="images/shushu.png" alt="鼠鼠" class="character-bounce">
-  <p class="slide-in">点击开始冒险吧！</p>
-  <a href="map.html"><button class="btn">开始游戏</button></a>
-  <script>
-    function playMusic() {
-      const bgm = document.getElementById('bgm');
-      bgm.play().catch(e => {});
-    }
-  </script>
-</body>
-</html>
+<!-- Map Start Page with START button -->
